# trimmy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  Makefile  README.md  VISION.md  app.py  mkdocs.yml  pyproject.toml
.claude/hooks/: session-start.sh
.codex/: hooks.json
.codex/hooks/: session-start.ps1  session-start.sh
.github/workflows/: backfill-releases.yml  ci.yml  docs.yml  pre-commit.yml  release.yml  test-redistribute.yml  zizmor.yml
docs/: cli.md  index.md  installation.md  keyboard-shortcuts.md  publishing.md  rendering.md  tutorial.md
docs/stylesheets/: extra.css
src/trimmy/: __init__.py  __main__.py
src/trimmy/app/: components.py  control_adapter.py  control_client.py  control_server.py  main_window.py  render_playground.py  theme.py  widgets.py
src/trimmy/app/icons/: __init__.py  _data.py  _material_icon.py
src/trimmy/app/preferences/: __init__.py
src/trimmy/app/preferences/application/: load_preferences_use_case.py  save_preferences_use_case.py  use_cases.py
src/trimmy/app/preferences/domain/: models.py  preferences_repository.py
src/trimmy/app/preferences/infrastructure/: json_preferences_repository.py
src/trimmy/app/views/: __init__.py  editor_view.py  render_view.py  startup_view.py
src/trimmy/apps/: __init__.py
src/trimmy/apps/cli/: __init__.py  bootstrap.py  control_client.py
src/trimmy/apps/cli/application/: dispatcher.py  formatter.py  parser.py  service.py
src/trimmy/apps/cli/domain/: __init__.py  models.py
src/trimmy/apps/desktop/: bootstrap.py  components.py  control_adapter.py  control_server.py  main_window.py  widgets.py
src/trimmy/apps/desktop/views/: editor_view.py  render_view.py  startup_view.py
src/trimmy/control/application/: dispatcher.py  formatter.py  parser.py  service.py
src/trimmy/control/domain/: __init__.py  models.py
src/trimmy/crop/: __init__.py
src/trimmy/crop/application/: use_cases.py
src/trimmy/crop/domain/: crop_selection_repository.py
src/trimmy/crop/infrastructure/: in_memory_repository.py  repositories.py
src/trimmy/editing/: __init__.py
src/trimmy/editing/crop/application/: flip_output_areas_use_case.py  initialize_crops_use_case.py  move_crop_use_case.py  resize_crop_use_case.py  synchronize_aspects_use_case.py  use_cases.py
src/trimmy/editing/crop/domain/: __init__.py  crop_selection_repository.py  models.py  services.py  specifications.py
src/trimmy/editing/crop/infrastructure/: __init__.py  in_memory_crop_selection_repository.py
src/trimmy/editing/shared/: __init__.py
src/trimmy/preferences/application/: load_preferences_use_case.py  save_preferences_use_case.py  use_cases.py
src/trimmy/preferences/domain/: __init__.py  models.py  repositories.py
src/trimmy/preferences/infrastructure/: json_preferences_repository.py  json_repository.py
src/trimmy/presentation/: main_window.py  widgets.py
src/trimmy/render/application/: use_cases.py
src/trimmy/render/domain/: repositories.py  specifications.py
src/trimmy/render/infrastructure/: __init__.py  presets.py
src/trimmy/rendering/application/: __init__.py  coordinator.py  plan_segments_use_case.py  probe_video_use_case.py  render_queue_use_case.py  render_segments_use_case.py  render_video_use_case.py  use_cases.py
src/trimmy/rendering/domain/: __init__.py  gateways.py  messages.py  models.py  preset_repository.py  services.py  specifications.py
src/trimmy/rendering/infrastructure/: ffmpeg.py  in_memory_preset_repository.py
src/trimmy/shared/: compat.py
src/trimmy/shared/domain/: aggregate_root.py  event.py  event_bus.py  use_case.py
src/trimmy/shared/infrastructure/: __init__.py  in_memory_event_bus.py  pyside_event_bus.py
src/trimmy/trim/: __init__.py
src/trimmy/trim/application/: use_cases.py
src/trimmy/trim/domain/: __init__.py  models.py
static/: index.html
tests/: conftest.py  mothers.py  test_config.py  test_control.py  test_crop_application.py  test_crop_domain.py  test_infrastructure.py  test_main_window.py  test_preferences.py  test_presets.py  test_render_application.py  test_render_coordinator.py  test_render_domain.py  test_renderer.py  test_shared.py  test_standards.py  test_trim.py  test_widgets.py
tests/app/: __init__.py
tests/app/preferences/: __init__.py
tests/app/preferences/infrastructure/: __init__.py  test_json_preferences_repository.py
tests/editing/: __init__.py
tests/editing/crop/: __init__.py
tests/editing/crop/application/: __init__.py  test_crop_application.py
tests/editing/crop/domain/: __init__.py  test_crop_domain.py
tests/editing/trim/: __init__.py  test_trim.py
tests/preferences/: __init__.py  test_preferences.py
tests/preferences/infrastructure/: __init__.py  test_json_preferences_repository.py
tests/rendering/: __init__.py
tests/rendering/application/: __init__.py  test_render_application.py  test_render_coordinator.py
tests/rendering/domain/: __init__.py  test_render_domain.py
tests/rendering/infrastructure/: __init__.py  test_ffmpeg.py  test_in_memory_preset_repository.py
tests/shared/: __init__.py
tests/shared/domain/: __init__.py  test_shared.py
tests/shared/infrastructure/: test_event_bus.py
trimmy/: __init__.py  __main__.py  config.py  main_window.py  presets.py  renderer.py  widgets.py
trimmy/crop/application/: __init__.py  use_cases.py
trimmy/crop/domain/: __init__.py  models.py  services.py  specifications.py
trimmy/preferences/application/: __init__.py  use_cases.py
trimmy/preferences/domain/: models.py
trimmy/preferences/infrastructure/: __init__.py  json_repository.py
trimmy/presentation/: __init__.py  main_window.py  widgets.py
trimmy/render/: __init__.py
trimmy/render/application/: use_cases.py
trimmy/render/domain/: gateways.py  models.py  services.py
trimmy/render/infrastructure/: ffmpeg.py  presets.py
trimmy/shared/: __init__.py
trimmy/shared/domain/: __init__.py  specification.py
trimmy/trim/application/: __init__.py  use_cases.py
trimmy/trim/domain/: services.py  specifications.py
trimmy/trim/infrastructure/: __init__.py
(+9 files in other folders)
