[project]
name = "trimmy"
version = "0.5.2"
description = "Trimmy — vertical split crop video editor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
keywords = ["video", "editor", "crop", "vertical", "social-media", "ffmpeg", "9:16", "reels", "tiktok"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "PySide6>=6.5",
    "typing_extensions>=4.0; python_version < '3.12'",
]

[project.urls]
Homepage = "https://github.com/musantro/trimmy"
Repository = "https://github.com/musantro/trimmy"
Issues = "https://github.com/musantro/trimmy/issues"
Changelog = "https://github.com/musantro/trimmy/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
trimmy = "trimmy.__main__:main"

[dependency-groups]
dev = [
    "commitizen>=4.16",
    "prek>=0.4",
    "ruff>=0.15",
    "ty>=0.0.48",
    "pytest>=8.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=trimmy --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
# Coverage is enforced only on the domain and application layers of every
# module. The infrastructure layers (and the PySide6 presentation layer)
# are omitted by configuration, so the 100% gate measures business logic
# exclusively.
omit = [
    "trimmy/__main__.py",
    "trimmy/presentation/*",
    "trimmy/*/infrastructure/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "I",
  "N",
  "D",
  "UP",
  "B",
  "S",
  "C4",
  "SIM",
  "ASYNC",
  "FBT",
  "ERA",
  "T20",
  "RET",
  "PTH",
  "FLY",
  "PERF",
  "FURB",
  "TRY",
  "FAST",
  "LOG",
  "G",
  "INP",
  "PIE",
  "TD",
  "PD",
]
ignore = ["D107", "D203", "D212", "D415", "B008"]


[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",
  "S105",
  "S106",
  "D",
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
all = "error"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
bump_message = "bump: version $current_version → $new_version [skip ci]"
update_changelog_on_bump = true
