[project]
name = "trimmy"
version = "0.16.0"
description = "Desktop video editor for cropping horizontal videos into vertical split-screen clips for TikTok, Reels, Shorts, and social media."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
keywords = [
    "crop-video",
    "desktop-app",
    "ffmpeg",
    "instagram-reels",
    "pyside6",
    "qt",
    "reels",
    "shorts",
    "social-media",
    "split-screen",
    "tiktok",
    "vertical-video",
    "video",
    "video-editor",
    "video-editing",
    "youtube-shorts",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2",
    "PySide6>=6.5",
    "qt-material-icons>=0.5.0",
    "typer>=0.26.8",
    "typing_extensions>=4.0; python_version < '3.12'",
]

[project.urls]
Homepage = "https://github.com/musantro/trimmy"
Documentation = "https://musantro.github.io/trimmy/"
Repository = "https://github.com/musantro/trimmy"
Source = "https://github.com/musantro/trimmy"
Issues = "https://github.com/musantro/trimmy/issues"
Changelog = "https://github.com/musantro/trimmy/blob/master/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
trimmy = "trimmy.__main__:main"

[dependency-groups]
dev = [
    "commitizen>=4.16",
    "prek>=0.4",
    "ruff>=0.15",
    "ty>=0.0.48",
    "pytest>=8.0",
    "pytest-cov",
]
docs = [
    "mkdocs-material>=9.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/trimmy --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
# Coverage is enforced only on the domain and application layers of every
# bounded context. The infrastructure layers and the PySide6 ``app``
# composition root (which owns the UI and session persistence) are omitted
# by configuration, so the 100% gate measures business logic exclusively.
omit = [
    "src/trimmy/__main__.py",
    "src/trimmy/app/**",
    "src/trimmy/**/infrastructure/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "I",
  "N",
  "D",
  "UP",
  "B",
  "S",
  "C4",
  "SIM",
  "ASYNC",
  "FBT",
  "ERA",
  "T20",
  "RET",
  "PTH",
  "FLY",
  "PERF",
  "FURB",
  "TRY",
  "FAST",
  "LOG",
  "G",
  "INP",
  "PIE",
  "TD",
  "PD",
]
ignore = ["D107", "D203", "D212", "D415", "B008"]


[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",
  "S105",
  "S106",
  "D",
]
"src/trimmy/app/control_adapter.py" = ["D102"]
"src/trimmy/control/domain/models.py" = ["D102"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
all = "error"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
bump_message = "bump: version $current_version → $new_version [skip ci]"
update_changelog_on_bump = true
